--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://sagalab.co/">
-    <meta property="twitter:title" content="Saga AI Research Labs | Advanced AI Development & Machine Learning Solutions">
+    <meta property="twitter:title"
+        content="Saga AI Research Labs | Advanced AI Development & Machine Learning Solutions">
     <meta property="twitter:description"
         content="Leading AI research lab specializing in advanced machine learning, generative AI, and autonomous trading systems. Building the future of intelligent technology.">
     <meta property="twitter:image" content="https://sagalab.co/images/preview.jpg">
@@ -73,9 +74,7 @@
       "foundingDate": "2023",
       "industry": "Artificial Intelligence",
       "keywords": "AI research, machine learning, generative AI, autonomous trading, crypto bots, open source AI",
-      "sameAs": [
-        "https://github.com/Saga-Labs"
-      ],
+      "keywords": "AI research, machine learning, generative AI, autonomous trading, crypto bots, open source AI",
       "hasOfferCatalog": {
         "@type": "OfferCatalog",
         "name": "AI Applications and Tools",
@@ -96,34 +95,7 @@
             "url": "https://apps.apple.com/us/app/pinku-private-ai/id6754878073",
             "description": "Personal AI assistant that runs entirely on-device with complete privacy"
           },
-          {
-            "@type": "SoftwareApplication",
-            "name": "Foro AI Forum",
-            "applicationCategory": "AI Research Tool",
-            "operatingSystem": "Web",
-            "url": "https://github.com/Saga-Labs/foro"
-          },
-          {
-            "@type": "SoftwareApplication",
-            "name": "AI Trading Bot",
-            "applicationCategory": "Financial Technology",
-            "operatingSystem": "Server",
-            "url": "https://github.com/Saga-Labs/ai-trading-bot"
-          },
-          {
-            "@type": "SoftwareApplication",
-            "name": "Crypto Portfolio Rebalancer",
-            "applicationCategory": "Financial Technology",
-            "operatingSystem": "Server",
-            "url": "https://github.com/Saga-Labs/rebalancer"
-          },
-          {
-            "@type": "SoftwareApplication",
-            "name": "Macro Crypto Dashboard",
-            "applicationCategory": "Analytics Tool",
-            "operatingSystem": "Web",
-            "url": "https://github.com/Saga-Labs/macro-crypto-dashboard"
-          },
+
           {
             "@type": "SoftwareApplication",
             "name": "3 Tasks: Daily Productivity",
@@ -223,18 +195,12 @@
                         </svg>
                     </a>
                 </li>
+
                 <li>
-                    <a href="https://github.com/Saga-Labs" target="_blank" class="icon-link" aria-label="GitHub">
-                        <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
-                            <path
-                                d="M12 2C6.477 2 2 6.486 2 12.017c0 4.424 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.238-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.464-1.11-1.464-.908-.62.069-.607.069-.607 1.004.071 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.833.092-.647.35-1.088.636-1.338-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.748-1.026 2.748-1.026.546 1.378.202 2.397.1 2.65.64.7 1.028 1.595 1.028 2.688 0 3.848-2.337 4.695-4.565 4.943.359.31.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .268.18.58.688.481A10.019 10.019 0 0 0 22 12.017C22 6.486 17.523 2 12 2z" />
-                        </svg>
-                    </a>
-                </li>
-                <li>
-                    <button class="nav-theme-toggle" onclick="toggleTheme()" title="Toggle dark mode" aria-label="Toggle dark mode">
+                    <button class="nav-theme-toggle" onclick="toggleTheme()" title="Toggle dark mode"
+                        aria-label="Toggle dark mode">
                         <svg id="nav-theme-icon" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z"/>
+                            <path d="M21 12.79A9 9 0 1 1 11.21 3 7 7 0 0 0 21 12.79z" />
                         </svg>
                     </button>
                 </li>
@@ -456,12 +422,7 @@
                             d="M18.244 2H21l-6.5 7.43L22.5 22H15.9l-4.7-6.2L5.7 22H3l7-8.02L1.8 2h6.8l4.3 5.7L18.244 2zm-2.43 18h1.64L8.29 4H6.57l9.244 16z" />
                     </svg>
                 </a>
-                <a href="https://github.com/Saga-Labs" target="_blank" aria-label="GitHub">
-                    <svg viewBox="0 0 24 24" width="20" height="20" fill="currentColor" aria-hidden="true">
-                        <path
-                            d="M12 2C6.477 2 2 6.486 2 12.017c0 4.424 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.238-.009-.868-.014-1.703-2.782.605-3.369-1.342-3.369-1.342-.454-1.155-1.11-1.464-1.11-1.464-.908-.62.069-.607.069-.607 1.004.071 1.532 1.032 1.532 1.032.892 1.53 2.341 1.088 2.91.833.092-.647.35-1.088.636-1.338-2.221-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0 1 12 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.748-1.026 2.748-1.026.546 1.378.202 2.397.1 2.65.64.7 1.028 1.595 1.028 2.688 0 3.848-2.337 4.695-4.565 4.943.359.31.678.92.678 1.855 0 1.338-.012 2.419-.012 2.749 0 .268.18.58.688.481A10.019 10.019 0 0 0 22 12.017C22 6.486 17.523 2 12 2z" />
-                    </svg>
-                </a>
+
             </div>
         </div>
     </footer>
