Rebrand Dora landing page to AI Video Generator with new screenshots

--- a/dora.html
+++ b/dora.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="icon" type="image/svg+xml" href="images/Dora Logo.png" />
-  <title>DORA — Create Videos with Sora 2</title>
+  <title>AI Video Generator — Create Videos with AI</title>
   <meta name="description"
-    content="Create stunning videos with OpenAI's Sora 2. Transform your imagination into reality with AI-powered video generation." />
-  <meta property="og:title" content="DORA — Create Videos with Sora 2" />
+    content="Create stunning videos with AI. Transform your imagination into reality with AI-powered video generation using Sora 2, Veo 3, and more." />
+  <meta property="og:title" content="AI Video Generator — Create Videos with AI" />
   <meta property="og:description"
-    content="Create stunning videos with OpenAI's Sora 2. Transform your imagination into reality with AI-powered video generation." />
+    content="Create stunning videos with AI. Transform your imagination into reality with AI-powered video generation using Sora 2, Veo 3, and more." />
   <meta property="og:type" content="website" />
-  <link rel="canonical" href="https://sagalab.co/dora/">
+  <link rel="canonical" href="https://sagalab.co/ai-video-generator/">
 
   <!-- Firebase Analytics -->
   <script type="module">
@@ -413,44 +413,47 @@
   <main class="wrap">
     <!-- Mini Logo Top Left -->
     <a href="#" class="mini-logo">
-      <span>✦</span> Dora
+      <span>✦</span> AI Video Generator
     </a>
 
     <!-- 3D Scrolling Gallery -->
     <div class="gallery-container">
       <div class="gallery-track">
         <!-- Set 1 -->
-        <img src="images/dora/460x998bb.webp" class="gallery-item" alt="Dora Interface 1" />
-        <img src="images/dora/460x998bb (1).webp" class="gallery-item" alt="Dora Interface 2" />
-        <img src="images/dora/460x998bb (2).webp" class="gallery-item" alt="Dora Interface 3" />
-        <img src="images/dora/460x998bb (3).webp" class="gallery-item" alt="Dora Interface 4" />
-        <img src="images/dora/460x998bb (4).webp" class="gallery-item" alt="Dora Interface 5" />
-        <img src="images/dora/460x998bb (5).webp" class="gallery-item" alt="Dora Interface 6" />
-        <img src="images/dora/460x998bb (6).webp" class="gallery-item" alt="Dora Interface 7" />
-        <img src="images/dora/460x998bb (7).webp" class="gallery-item" alt="Dora Interface 8" />
-        <img src="images/dora/460x998bb (8).webp" class="gallery-item" alt="Dora Interface 9" />
+        <img src="images/dora/01.webp" class="gallery-item" alt="AI Video Generator Interface 1" />
+        <img src="images/dora/02.webp" class="gallery-item" alt="AI Video Generator Interface 2" />
+        <img src="images/dora/03.webp" class="gallery-item" alt="AI Video Generator Interface 3" />
+        <img src="images/dora/04.webp" class="gallery-item" alt="AI Video Generator Interface 4" />
+        <img src="images/dora/05.webp" class="gallery-item" alt="AI Video Generator Interface 5" />
+        <img src="images/dora/06.webp" class="gallery-item" alt="AI Video Generator Interface 6" />
+        <img src="images/dora/07.webp" class="gallery-item" alt="AI Video Generator Interface 7" />
+        <img src="images/dora/08.webp" class="gallery-item" alt="AI Video Generator Interface 8" />
+        <img src="images/dora/09.webp" class="gallery-item" alt="AI Video Generator Interface 9" />
+        <img src="images/dora/10.webp" class="gallery-item" alt="AI Video Generator Interface 10" />
 
         <!-- Set 2 (Seamless Loop) -->
-        <img src="images/dora/460x998bb.webp" class="gallery-item" alt="Dora Interface 1" />
-        <img src="images/dora/460x998bb (1).webp" class="gallery-item" alt="Dora Interface 2" />
-        <img src="images/dora/460x998bb (2).webp" class="gallery-item" alt="Dora Interface 3" />
-        <img src="images/dora/460x998bb (3).webp" class="gallery-item" alt="Dora Interface 4" />
-        <img src="images/dora/460x998bb (4).webp" class="gallery-item" alt="Dora Interface 5" />
-        <img src="images/dora/460x998bb (5).webp" class="gallery-item" alt="Dora Interface 6" />
-        <img src="images/dora/460x998bb (6).webp" class="gallery-item" alt="Dora Interface 7" />
-        <img src="images/dora/460x998bb (7).webp" class="gallery-item" alt="Dora Interface 8" />
-        <img src="images/dora/460x998bb (8).webp" class="gallery-item" alt="Dora Interface 9" />
+        <img src="images/dora/01.webp" class="gallery-item" alt="AI Video Generator Interface 1" />
+        <img src="images/dora/02.webp" class="gallery-item" alt="AI Video Generator Interface 2" />
+        <img src="images/dora/03.webp" class="gallery-item" alt="AI Video Generator Interface 3" />
+        <img src="images/dora/04.webp" class="gallery-item" alt="AI Video Generator Interface 4" />
+        <img src="images/dora/05.webp" class="gallery-item" alt="AI Video Generator Interface 5" />
+        <img src="images/dora/06.webp" class="gallery-item" alt="AI Video Generator Interface 6" />
+        <img src="images/dora/07.webp" class="gallery-item" alt="AI Video Generator Interface 7" />
+        <img src="images/dora/08.webp" class="gallery-item" alt="AI Video Generator Interface 8" />
+        <img src="images/dora/09.webp" class="gallery-item" alt="AI Video Generator Interface 9" />
+        <img src="images/dora/10.webp" class="gallery-item" alt="AI Video Generator Interface 10" />
 
         <!-- Set 3 (Extra buffer) -->
-        <img src="images/dora/460x998bb.webp" class="gallery-item" alt="Dora Interface 1" />
-        <img src="images/dora/460x998bb (1).webp" class="gallery-item" alt="Dora Interface 2" />
-        <img src="images/dora/460x998bb (2).webp" class="gallery-item" alt="Dora Interface 3" />
-        <img src="images/dora/460x998bb (3).webp" class="gallery-item" alt="Dora Interface 4" />
-        <img src="images/dora/460x998bb (4).webp" class="gallery-item" alt="Dora Interface 5" />
-        <img src="images/dora/460x998bb (5).webp" class="gallery-item" alt="Dora Interface 6" />
-        <img src="images/dora/460x998bb (6).webp" class="gallery-item" alt="Dora Interface 7" />
-        <img src="images/dora/460x998bb (7).webp" class="gallery-item" alt="Dora Interface 8" />
-        <img src="images/dora/460x998bb (8).webp" class="gallery-item" alt="Dora Interface 9" />
+        <img src="images/dora/01.webp" class="gallery-item" alt="AI Video Generator Interface 1" />
+        <img src="images/dora/02.webp" class="gallery-item" alt="AI Video Generator Interface 2" />
+        <img src="images/dora/03.webp" class="gallery-item" alt="AI Video Generator Interface 3" />
+        <img src="images/dora/04.webp" class="gallery-item" alt="AI Video Generator Interface 4" />
+        <img src="images/dora/05.webp" class="gallery-item" alt="AI Video Generator Interface 5" />
+        <img src="images/dora/06.webp" class="gallery-item" alt="AI Video Generator Interface 6" />
+        <img src="images/dora/07.webp" class="gallery-item" alt="AI Video Generator Interface 7" />
+        <img src="images/dora/08.webp" class="gallery-item" alt="AI Video Generator Interface 8" />
+        <img src="images/dora/09.webp" class="gallery-item" alt="AI Video Generator Interface 9" />
+        <img src="images/dora/10.webp" class="gallery-item" alt="AI Video Generator Interface 10" />
       </div>
     </div>
 
